# BS-Uebung

./: README.md
00-lecture_notes/: .gitignore  case.sh  env_variable.c  sed.sh
02-shell:filesystem_directories/: 1-filesystem_directories.sh  3-directory-manipulation-cmd.sh  4-explore-root-filesystem.sh
03-shell:files_and_in_out_redirect/: .gitignore  main.c  ueb3.sh
04-shell:file_names_and_access_rights/: 01-basic_file_names.sh  02-file_names_with_meta_characters.sh  03-basic_access_rights.sh
05-shell:shell_scripts/: 01-variables.sh  03-control_structure:for.sh  04-control_structure:if.sh
06-shell:misc/: .gitignore  01-sequneces.sh  02-scripts:remove.sh  02-scripts:rename.sh  03-scripts-with-interaction:print.sh  03-scripts-with-interaction:user-shell.sh  04-find-files.sh  05-translate.sh  06-file-extension.sh  06-getext.sh  07-explore-the-linux-kernel-1.sh  08-explore-the-linux-kernel-2.sh
07-build_c_programs/03_simple_prog_automake/: .gitignore  04-build-with-autotools.sh  Makefile.am  configure.ac  main.c  simple_prog.1
08-software-packages/: 01-software-managemant.sh  02-build-your-own-deb-package.sh  03-use-and-inspect-package-with-dpkg.sh  04-flatpak-software-management.sh  05-build-your-own-flatpak-package.sh  changelog  control  copyright
09-process-thread/: 01-process-management.sh  02-process-information.sh  demo_program
13-memory-management-libraries-user-management/: 03-user-management.sh
14-drivers/: .gitignore  01-using-drivers.sh  02-look-into-the-module-sources.sh  Makefile  mycat.c  scull.c
99-exam-prep/: 01-hard-to-remember.sh  (+1 more)
(+76 files in other folders)
